--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "용도 불명"
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: kr
-url: http://jhyean8.github.io/
+url: https://jhyean8.github.io
 feed:
   path: atom.xml
 
